Added proceed text and button to first page

--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -4,7 +4,14 @@
 
 //Home Promo styles
     
-
+	.proceedBtn {   float: left;
+    width: 100%;
+    text-transform: uppercase;
+    color: #3c7c99;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: 500;
+}
 
 	.promo1{
 
