--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -568,7 +568,7 @@ input#avatar-name-input {
     width:100%;
     max-width:430px;
     padding:0 !important;
-    /*margin-top: 23px !important;*/
+    margin-top: 23px !important;
 }
 .avatar-selection > li{
     float:left;
