--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1628,6 +1628,15 @@ header .user-avatar img {
       color: black;
       opacity: 0.75; }
 
+.proceedBtn {
+  float: left;
+  width: 100%;
+  text-transform: uppercase;
+  color: #3c7c99;
+  margin-top: 20px;
+  text-align: center;
+  font-weight: 500; }
+
 .promo1 ul li .carousel-demo ul li {
   overflow: hidden; }
   .promo1 ul li .carousel-demo ul li img {
@@ -2167,7 +2176,7 @@ input#avatar-name-input {
   width: 100%;
   max-width: 430px;
   padding: 0 !important;
-  /*margin-top: 23px !important;*/ }
+  margin-top: 23px !important; }
 
 .avatar-selection > li {
   float: left;
