--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -18,16 +18,16 @@
         <header>
             <a href="javascript:void(0);" class="burger-menu-symbol"></a>
 
-            <a href="javascript:void(0);" class="logo"><img src="/img/logo_header.png" alt="" /></a>
+            <a href="javascript:void(0);" class="logo"><img src="../img/logo_header.png" alt="" /></a>
             <div class="header-info-block">
                 <div class="header-right-block">
                     <div class="lang">
                         <ul>
                             <li>
-                                <a href="javascript:void(0);"><img src="/img/lang1.jpg" alt="" /></a>
+                                <a href="javascript:void(0);"><img src="../img/lang1.jpg" alt="" /></a>
                                 <ul>
-                                    <li><a href="javascript:void(0);"><img src="/img/lang1.jpg" alt="" /></a></li>
-                                    <li><a href="javascript:void(0);"><img src="/img/lang2.jpg" alt="" /></a></li>
+                                    <li><a href="javascript:void(0);"><img src="../img/lang1.jpg" alt="" /></a></li>
+                                    <li><a href="javascript:void(0);"><img src="../img/lang2.jpg" alt="" /></a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -50,14 +50,14 @@
         <!-- login -->
         <div class="login-window" style="display:none;">
             <div class="close-win">
-                <a href="javascript:void(0);"><img src="/img/modal_close.png" alt="" /></a>
+                <a href="javascript:void(0);"><img src="../img/modal_close.png" alt="" /></a>
             </div>
             <div class="container">
-                <img src="/img/logo_win.png" class="logo" alt="" />
+                <img src="../img/logo_win.png" class="logo" alt="" />
                 <h1>Create your account</h1>
 
-                <a href="javascript:void(0);" class="full-btn fb-btn"><img src="/img/fb.png" alt="" />sign up with facebook</a>
-                <a href="javascript:void(0);" class="full-btn google-btn"><img src="/img/google.png" alt="" />sign up with google</a>
+                <a href="javascript:void(0);" class="full-btn fb-btn"><img src="../img/fb.png" alt="" />sign up with facebook</a>
+                <a href="javascript:void(0);" class="full-btn google-btn"><img src="../img/google.png" alt="" />sign up with google</a>
 
                 <div class="info">You already have an account? <a href="javascript:void(0);">Log in</a></div>
             </div>
@@ -67,7 +67,7 @@
             <section class="promo1 slider">
                 <ul>
                     <li>
-                        <img src="/img/landing_slider_1.jpg" alt="" />
+                        <img src="../img/landing_slider_1.jpg" alt="" />
                         <div class="slider-txt-container">
                             <h2>A story for every family</h2>
                             <h3>Imagine an illustration book with your <br />family traveling around the world</h3>
@@ -86,7 +86,7 @@
                 <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
                 <div class="slider">
                     <ul>
-                        <li><img src="/img/promo2_slide_1_all.png" alt="" /></li>
+                        <li><img src="../img/promo2_slide_1_all.png" alt="" /></li>
                     </ul>
                     <div class="slider-controls">
                         <a href="javascript:void(0);" class="slider-prev"></a>
@@ -101,12 +101,12 @@
                 <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
 
                 <div class="grid-view">
-                    <div class="col-big"><img src="/img/landing_grid_big.jpg" alt="" /></div>
+                    <div class="col-big"><img src="../img/landing_grid_big.jpg" alt="" /></div>
                     <div class="col-small">
-                        <div class="col-1-0f-4"><img src="/img/landing_grid_sm1.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="/img/landing_grid_sm2.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="/img/landing_grid_sm3.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="/img/landing_grid_sm4.jpg" alt="" /></div>
+                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm1.jpg" alt="" /></div>
+                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm2.jpg" alt="" /></div>
+                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm3.jpg" alt="" /></div>
+                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm4.jpg" alt="" /></div>
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
         </div>
         <footer>
             <div class="container">
-                <a href="javascript:void(0);" class="logo"><img src="/img/logo_footer_b.png" alt="" /></a>
+                <a href="javascript:void(0);" class="logo"><img src="../img/logo_footer_b.png" alt="" /></a>
                 <div class="footer-menu">
                     <div class="footer-menu-col">
                         <h3>THE COMPANY</h3>
