--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -49,6 +49,7 @@ $rubik: 'Rubik', sans-serif;
 @import "containers.scss";
 @import "fixes.scss";
 @import "common.scss";
+@import "site.scss";
 
 body{
     background-color:#eceadd;
