--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -74,7 +74,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 <!-- bottom part -> menu & buttons -->
 <section id="bottomPartWrapper">
     <div class="container">
-        <div class="w-col-md-4"><a target="_self" href="/" class="footer-btn edit-btn">Edit Avatar</a></div>
+        <div class="w-col-md-4"><a target="_self" href="/avatarbuilder" class="footer-btn edit-btn">Edit Avatar</a></div>
         <!-- steps menu -->
         <ul class="steps-menu w-col-md-4">
             <li class="done">
