moved the class landing-page from the main template into its appropriate view, wrapped the view in a div with the class

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -1,48 +1,50 @@
-﻿            <section class="promo1 slider">
-                <ul>
-                    <li>
-                        <img src="../img/landing_slider_1.jpg" alt="" />
-                        <div class="slider-txt-container">
-                            <h2>A story for every family</h2>
-                            <h3>Imagine an illustration book with your <br />family traveling around the world</h3>
-                        </div>
-                        <a href="javascript:void(0);" class="full-btn">CREATE YOUR BOOK</a>
-                    </li>
-                </ul>
-                <div class="slider-controls">
-                    <a href="javascript:void(0);" class="slider-prev"></a>
-                    <a href="javascript:void(0);" class="slider-next"></a>
+﻿<div class="landing-page">
+    <section class="promo1 slider">
+        <ul>
+            <li>
+                <img src="../img/landing_slider_1.jpg" alt="" />
+                <div class="slider-txt-container">
+                    <h2>A story for every family</h2>
+                    <h3>Imagine an illustration book with your <br />family traveling around the world</h3>
                 </div>
-            </section>
-            <section class="promo2">
-                <h2>A story with your family in it</h2>
-                <h3 class="desktop">Gummi bears gummies muffin cookie. Cake pudding biscuit carrot <br />cake. Cheesecake caramels sweet.</h3>
-                <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
-                <div class="slider">
-                    <ul>
-                        <li><img src="../img/promo2_slide_1_all.png" alt="" /></li>
-                    </ul>
-                    <div class="slider-controls">
-                        <a href="javascript:void(0);" class="slider-prev"></a>
-                        <a href="javascript:void(0);" class="slider-next"></a>
-                    </div>
-                </div>
-                <a href="javascript:void(0);" class="full-btn">Buy Now</a>
-            </section>
-            <section class="promo3">
-                <h2>Make your family avatars fast n easy</h2>
-                <h3 class="desktop">Gummi bears gummies muffin cookie. Cake pudding biscuit carrot <br />cake. Cheesecake caramels sweet.</h3>
-                <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
-
-                <div class="grid-view">
-                    <div class="col-big"><img src="../img/landing_grid_big.jpg" alt="" /></div>
-                    <div class="col-small">
-                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm1.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm2.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm3.jpg" alt="" /></div>
-                        <div class="col-1-0f-4"><img src="../img/landing_grid_sm4.jpg" alt="" /></div>
-                    </div>
-                </div>
-
-                <a href="javascript:void(0);" class="full-btn">create now your book</a>
-            </section>
+                <a href="javascript:void(0);" class="full-btn">CREATE YOUR BOOK</a>
+            </li>
+        </ul>
+        <div class="slider-controls">
+            <a href="javascript:void(0);" class="slider-prev"></a>
+            <a href="javascript:void(0);" class="slider-next"></a>
+        </div>
+    </section>
+    <section class="promo2">
+        <h2>A story with your family in it</h2>
+        <h3 class="desktop">Gummi bears gummies muffin cookie. Cake pudding biscuit carrot <br />cake. Cheesecake caramels sweet.</h3>
+        <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
+        <div class="slider">
+            <ul>
+                <li><img src="../img/promo2_slide_1_all.png" alt="" /></li>
+            </ul>
+            <div class="slider-controls">
+                <a href="javascript:void(0);" class="slider-prev"></a>
+                <a href="javascript:void(0);" class="slider-next"></a>
+            </div>
+        </div>
+        <a href="javascript:void(0);" class="full-btn">Buy Now</a>
+    </section>
+    <section class="promo3">
+        <h2>Make your family avatars fast n easy</h2>
+        <h3 class="desktop">Gummi bears gummies muffin cookie. Cake pudding biscuit carrot <br />cake. Cheesecake caramels sweet.</h3>
+        <h3 class="mobile">Gummi bears gummies muffin cookie</h3>
+    
+        <div class="grid-view">
+            <div class="col-big"><img src="../img/landing_grid_big.jpg" alt="" /></div>
+            <div class="col-small">
+                <div class="col-1-0f-4"><img src="../img/landing_grid_sm1.jpg" alt="" /></div>
+                <div class="col-1-0f-4"><img src="../img/landing_grid_sm2.jpg" alt="" /></div>
+                <div class="col-1-0f-4"><img src="../img/landing_grid_sm3.jpg" alt="" /></div>
+                <div class="col-1-0f-4"><img src="../img/landing_grid_sm4.jpg" alt="" /></div>
+            </div>
+        </div>
+    
+        <a href="javascript:void(0);" class="full-btn">create now your book</a>
+    </section>
+</div>
