removed head and foot sections from contact view - turned into view instead of page, wrapped in a div with appropriate class, additionally changed the links on the landing page view to point to avatar builder

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -7,7 +7,7 @@
                     <h2>A story for every family</h2>
                     <h3>Imagine an illustration book with your <br />family traveling around the world</h3>
                 </div>
-                <a href="javascript:void(0);" class="full-btn">CREATE YOUR BOOK</a>
+                <a href="/avatarbuilder" class="full-btn">CREATE YOUR BOOK NOW</a>
             </li>
         </ul>
         <div class="slider-controls">
@@ -45,6 +45,6 @@
             </div>
         </div>
     
-        <a href="javascript:void(0);" class="full-btn">create now your book</a>
+        <a href="/avatarbuilder" class="full-btn">CREATE YOUR BOOK NOW</a>
     </section>
 </div>
