connected login modal via bootstrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1172,6 +1172,9 @@ footer .contact-info .seperator {
     display: table-row;
     height: 1px; } }
 
+#myModal {
+  display: none; }
+
 body {
   background-color: #eceadd; }
 
