--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -540,6 +540,7 @@ footer .copyright {
     right: 0;
     margin: auto;
     text-align: center;
+    user-select: none;
 }
 .promo1 .slider-txt-container h2{
     font-weight:300;
