--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -2,7 +2,61 @@
     <section class="promo1 slider">
         <ul>
             <li>
-                <img src="../img/landing_slider_1.jpg" alt="" />
+                <div class="carousel-demo" style="width: 100%;">
+                <ul rn-carousel rn-carousel-auto-slide="6" rn-carousel-transition="slide" rn-carousel-controls rn-carousel-index="main.carousel_index" class="carousel3">
+<li>
+    <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="" />
+</li>
+<li>
+    <img src="https://pfstories.com/img/landing_slider_2.jpg" alt="" />
+</li>
+<li>
+    <img src="https://pfstories.com/img/landing_slider_3.jpg" alt="" />
+</li>
+<li>
+    <img src="https://pfstories.com/img/landing_slider_4.jpg" alt="" />
+</li>
+                </ul>
+                </div>
+
+<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="icon-prev" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="icon-next" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> -->
+<!-- <div class="slider" style="width: 800px; height: 600px; margin: 0 auto;">
+  <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="" />
+  <img src="https://pfstories.com/img/landing_slider_2.jpg" alt="" />
+  <img src="https://pfstories.com/img/landing_slider_3.jpg" alt="" />
+  <img src="https://pfstories.com/img/landing_slider_4.jpg" alt="" />
+</div> -->
+<!--                 <div class="landing-slider">
+                    <img width="500" src="../img/landing_slider_1.jpg" alt="" />
+                    <img width="500" src="../img/landing_slider_2.jpg" alt="" />
+                    <img width="500" src="../img/landing_slider_3.jpg" alt="" />
+                    <img width="500" src="../img/landing_slider_4.jpg" alt="" />
+                </div> -->
                 <div class="slider-txt-container">
                     <h2>A story for every family</h2>
                     <h3>Imagine an illustration book with your <br />family traveling around the world</h3>
@@ -11,8 +65,8 @@
             </li>
         </ul>
         <div class="slider-controls">
-            <a href="javascript:void(0);" class="slider-prev"></a>
-            <a href="javascript:void(0);" class="slider-next"></a>
+<!--             <a href="javascript:void(0);" class="slider-prev"></a> -->
+<!--             <a href="javascript:void(0);" class="slider-next"></a> -->
         </div>
     </section>
     <section class="promo2">
