--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1492,8 +1492,35 @@ font-size:20px;
     top: 200px;
 }
 
+.rn-carousel-control {
+    z-index: 5000;
+}
+
+.promo1 .rn-carousel-control.rn-carousel-control-next {
+    display: block;
+    background: url(/img/slider_next.png) no-repeat center;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    right: 106px;
+    top: 200px;
+}
+
+.promo1 .rn-carousel-control.rn-carousel-control-prev {
+    display: block;
+    background:url(/img/slider_prev.png) no-repeat center;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 106px;
+    top: 200px;
+}
+
 .carousel3.ng-scope {
     width: 300px;
     height: 500px;
 }
 
+.slider {
+    user-select: none;
+}
