hidden the bootstrap modal overlay, issue fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2400,3 +2400,6 @@ input[type="radio"]:checked + label.color-thumb {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none; }
+
+.modal-backdrop {
+  display: none !important; }
