side-track: removed background on avatar builder

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -151,7 +151,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                    <li>
                         <ul>
                             <li>
-                                <img class="" src="img/background.png">
+                            <!--     <img class="" src="img/background.png"> -->
                                 <img class="" ng-repeat="value in main.results[0].images" ng-src="{{main.imageUrls[value].location}}">
                             </li>
                             <!-- new character -->
@@ -166,7 +166,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                    <li>
                         <ul>
                             <li>
-                                <img class="" src="img/background.png">
+                                <!-- <img class="" src="img/background.png"> -->
                                 <img class="" ng-repeat="value in main.results[1].images" ng-src="{{main.imageUrls[value].location}}">
                             </li>
                             <!-- new character -->
@@ -181,7 +181,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                    <li>
                         <ul>
                             <li>
-                                <img class="" src="img/background.png">
+                               <!--  <img class="" src="img/background.png"> -->
                                 <img class="" ng-repeat="value in main.results[2].images" ng-src="{{main.imageUrls[value].location}}">
                             </li>
                             <!-- new character -->
