--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -89,8 +89,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                                 <option value="female">{{main.currentAvatarAge === 'adult' ? 'Woman' : 'Girl'}}</option>
                             </select>
                         </div>
-                        <h3>KID'S BIRTHDAY</h3>
-                        <input type="date" name="childDate" placeholder="MM/DD/YYYY" class="date-input">
+                        <h3 ng-if="main.currentAvatarAge === 'child'">KID'S BIRTHDAY</h3>
+                        <input ng-if="main.currentAvatarAge === 'child'" type="date" name="childDate" placeholder="MM/DD/YYYY" class="date-input">
                     </div>
                     <!-- MGS: The way my selector works currently is thas they clickable choices are actually hidden radio buttons with a styled label which contains a preview image. The buttons themselves can be hidden using css. I wrote a sample repeatable tab to reflect that. If you think that is too difficult to work around, please leave a comment and we can rethink the approach -->
                     <div id="{{property.image_type}}" class="tab-pane tab-pane-style" ng-repeat="property in main.schema">
