made an initial attempt to validate that avatar name has been entered before advancing or retracting the avatar. Most work invovled changing the watcher at the top of main controller. Updated the dom accordingly. This is a breaking change do not merge do not deploy. Must finalize and test!

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -89,6 +89,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                                 <option value="female">{{main.currentAvatarAge === 'adult' ? 'Woman' : 'Girl'}}</option>
                             </select>
                         </div>
+                        {{main.carousel_index}}
                         <h3 ng-if="main.currentAvatarAge === 'child'">KID'S BIRTHDAY</h3>
                         <input ng-model="main.currentAvatarBirthday" ng-if="main.currentAvatarAge === 'child'" type="date" name="childDate" placeholder="MM/DD/YYYY" class="date-input">
                     </div>
