removed the plus sign from the avatars, made sure the landing page slider is not restricted like avatar builder

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -3,7 +3,7 @@
         <ul>
             <li>
                 <div class="carousel-demo" style="width: 100%;">
-                <ul rn-carousel rn-carousel-auto-slide="6" rn-carousel-transition="slide" rn-carousel-controls rn-carousel-index="main.carousel_index" class="carousel3">
+                <ul rn-carousel rn-carousel-auto-slide="6" rn-carousel-transition="slide" rn-carousel-controls class="carousel3">
 <li>
     <img src="https://pfstories.com/img/landing_slider_1.jpg" alt="" />
 </li>
