--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -159,8 +159,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                             <!-- not implemented yet but will function predictably -->
                             {{main.currentAvatarIndex}}
                             <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-                                <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
+<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
+                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
                             </li>
                         </ul>
                    </li> 
@@ -174,8 +174,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                             <!-- not implemented yet but will function predictably -->
                             {{main.currentAvatarIndex}}
                             <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-                                <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
+<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
+                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
                             </li>
                         </ul>
                    </li> 
@@ -189,8 +189,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                             <!-- not implemented yet but will function predictably -->
                             {{main.currentAvatarIndex}}
                             <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-                                <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
+<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
+                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
                             </li>
                         </ul>
                    </li> 
