removed the family name and pencil and question mark icons. Added a selector to choosy family type

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -140,11 +140,17 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
         <!-- start slider --><!-- in order to stylize the images with absolute position we need to add different class for each element, for example .eyes-img, .body-img, .hair-img etc -->
         <section id="slider">
             <div class="header-info">
-                <a class="pencil" href="javascript:void(0);"></a>
+<!--                 <a class="pencil" href="javascript:void(0);"></a> -->
                 <!-- family's name -->
-                <input type="text" name="" id="" placeholder="FAMILY NAME" value="THE TOKOUSBALIDES" />
+<!--                 <input type="text" name="" id="" placeholder="FAMILY NAME" value="THE TOKOUSBALIDES" /> -->
                 <!-- help button -->
-                <a href="javascript:void(0);" class="q-circle">?</a>
+<!--                 <a href="javascript:void(0);" class="q-circle">?</a> -->
+            <div>
+                <select name="family-type">
+                    <option value="3" selected>2 adults and 1 child</option>
+                    <option value="2">1 adult and 1 child</option>
+                </select>
+            </div>
             </div>
             <!-- slides -->
             <div class="carousel-demo" style="width: 100%;">
