--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -146,20 +146,24 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                 <!-- help button -->
 <!--                 <a href="javascript:void(0);" class="q-circle">?</a> -->
             <div>
-                <select name="family-type">
-                    <option value="3" selected>2 adults and 1 child</option>
+                <select ng-model="main.familyType" name="family-type">
+                    <option value="3">2 adults and 1 child</option>
                     <option value="2">1 adult and 1 child</option>
                 </select>
+            </div>
+            <div>
+                This area for debug only
+                {{main.familyType}}
             </div>
             </div>
             <!-- slides -->
             <div class="carousel-demo" style="width: 100%;">
                 <ul rn-carousel rn-carousel-transition="hexagon" rn-carousel-controls rn-carousel-index="main.carousel_index" class="carousel3">
-                   <li>
+                   <li ng-repeat="index in main.getHelperArray(main.familyType)">
                         <ul>
                             <li>
                             <!--     <img class="" src="img/background.png"> -->
-                                <img class="" ng-repeat="value in main.results[0].images" ng-src="{{main.imageUrls[value].location}}">
+                                <img class="" ng-repeat="value in main.results[index].images" ng-src="{{main.imageUrls[value].location}}">
                             </li>
                             <!-- new character -->
                             <!-- not implemented yet but will function predictably -->
@@ -170,36 +174,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                             </li>
                         </ul>
                    </li> 
-                   <li>
-                        <ul>
-                            <li>
-                                <!-- <img class="" src="img/background.png"> -->
-                                <img class="" ng-repeat="value in main.results[1].images" ng-src="{{main.imageUrls[value].location}}">
-                            </li>
-                            <!-- new character -->
-                            <!-- not implemented yet but will function predictably -->
-                            {{main.currentAvatarIndex}}
-                            <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
-                            </li>
-                        </ul>
-                   </li> 
-                   <li>
-                        <ul>
-                            <li>
-                               <!--  <img class="" src="img/background.png"> -->
-                                <img class="" ng-repeat="value in main.results[2].images" ng-src="{{main.imageUrls[value].location}}">
-                            </li>
-                            <!-- new character -->
-                            <!-- not implemented yet but will function predictably -->
-                            {{main.currentAvatarIndex}}
-                            <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
-                            </li>
-                        </ul>
-                   </li> 
+                   
                 </ul>
             </div>
 
