--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -162,17 +162,23 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                    <li ng-repeat="index in main.getHelperArray(main.familyType)">
                         <ul>
                             <li>
+                                <div class="q-circle delete-avatar-button" ng-if="main.familyType==='3' && main.carousel_index !== 0 && $index === main.carousel_index" ng-click="main.familyType='2'">x</div>
+                            </li>
+                            <li>
                             <!--     <img class="" src="img/background.png"> -->
                                 <img class="" ng-repeat="value in main.results[index].images" ng-src="{{main.imageUrls[value].location}}">
                             </li>
                             <!-- new character -->
                             <!-- not implemented yet but will function predictably -->
                             {{main.currentAvatarIndex}}
-                            <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-<!--                                 <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div> -->
+                            <li>
+                                <div class="q-circle big" ng-if="main.familyType==='2' && main.carousel_index === +main.familyType - 1 && $index === +main.familyType - 1" ng-click="main.familyType='3'">+</div>
+                                <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
                             </li>
                         </ul>
+<!--                         <div>{{$index === +main.familyType - 1}}</div>
+                        <div>{{main.carousel_index === +main.familyType - 1}}</div>
+                        <div>{{main.familyType==='2'}}</div> -->
                    </li> 
                    
                 </ul>
