--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1528,3 +1528,15 @@ font-size:20px;
 .modal-backdrop {
     display: none !important;
 }
+
+#slider .q-circle.delete-avatar-button {
+    position: absolute;
+    left: 40px;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    top: 100px;
+    cursor: pointer;
+    z-index: 1500;
+}
