created a name error flag to highlight name field if missing name. Changed default to 2 family members

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2748,3 +2748,6 @@ input[type="radio"]:checked + label.color-thumb {
   top: 100px;
   cursor: pointer;
   z-index: 1500; }
+
+#tabs input.input-error {
+  border: 2px solid red; }
