extracted adding an avatar to a function increaseFamily

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -170,7 +170,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                             <!-- new character -->
                             <!-- not implemented yet but will function predictably -->
                             <li>
-                                <div class="q-circle big" ng-if="main.familyType==='2' && main.carousel_index === +main.familyType - 1 && $index === +main.familyType - 1" ng-click="main.familyType='3'">+</div>
+                                <div class="q-circle big" ng-if="main.familyType==='2' && main.carousel_index === +main.familyType - 1 && $index === +main.familyType - 1" ng-click="main.increaseFamily()">+</div>
                                 <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
                             </li>
                         </ul>
