enabled arrow navigation on the book preview

--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -42,8 +42,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                 <!--Placeholder, required for responsive layout (height). Please do not remove-->
             </div>
             <div class="flipbook-arrows">
-                <a href="javascript:void(0);" class="arrows left inactive"><img src="/img/flip_arrow_left.png" /></a>
-                <a href="javascript:void(0);" class="arrows right"><img src="/img/flip_arrow_right.png" /></a>
+                <a href="javascript:void(0);" ng-click="preview.prevPage()" class="arrows left"><img src="/img/flip_arrow_left.png" /></a>
+                <a href="javascript:void(0);" ng-click="preview.nextPage()" class="arrows right"><img src="/img/flip_arrow_right.png" /></a>
             </div>
         </div>
         <div class="flipbook-info-container">
