--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,54 +1,4 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/site.css">
-</head>
-<body>
-    <div class="site-page profile-page">
-        <header>
-            <a href="javascript:void(0);" class="burger-menu-symbol"></a>
-
-            <a href="javascript:void(0);" class="logo"><img src="/img/logo_header.png" alt="" /></a>
-            <div class="header-info-block">
-                <div class="header-right-block">
-                    <div class="lang">
-                        <ul>
-                            <li>
-                                <a href="javascript:void(0);"><img src="/img/lang1.jpg" alt="" /></a>
-                                <ul>
-                                    <li><a href="javascript:void(0);"><img src="/img/lang1.jpg" alt="" /></a></li>
-                                    <li><a href="javascript:void(0);"><img src="/img/lang2.jpg" alt="" /></a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="javascript:void(0);" class="user-avatar"><img src="/img/user_avatar.jpg" alt=""></a>
-                    <div class="clearfix"></div>
-                </div>
-
-                <ul class="header-menu">
-                    <li><a href="javascript:void(0);">Home</a></li>
-                    <li><a href="javascript:void(0);">Profile</a></li>
-                    <li><a href="javascript:void(0);">Settings</a></li>
-                    <li><a href="javascript:void(0);">About</a></li>
-                </ul>
-                <div class="clearfix"></div>
-            </div>
-            <div class="clearfix"></div>
-        </header>
-
-        <div class="site-container">
-            <section class="profile-header">
+﻿            <section class="profile-header">
                 <img src="/img/profile_bg.jpg" alt="" />
                 <div class="container">
                     <img class="user-avatar" src="/img/user_avatar.jpg" alt="" />
@@ -128,49 +78,3 @@
                     </div><!-- block -->
                 </div>
             </section>
-        </div>
-
-
-        <footer>
-            <div class="container">
-                <a href="javascript:void(0);" class="logo"><img src="/img/logo_footer_b.png" alt="" /></a>
-                <div class="footer-menu">
-                    <div class="footer-menu-col">
-                        <h3>THE COMPANY</h3>
-                        <ul>
-                            <li><a href="javascript:void(0);">About us</a></li>
-                            <li><a href="javascript:void(0);">create</a></li>
-                            <li><a href="javascript:void(0);">tech specs</a></li>
-                            <li><a href="javascript:void(0);">order information</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-menu-col">
-                        <h3>FOOTER</h3>
-                        <ul>
-                            <li><a href="javascript:void(0);">About us</a></li>
-                            <li><a href="javascript:void(0);">create</a></li>
-                            <li><a href="javascript:void(0);">tech specs</a></li>
-                            <li><a href="javascript:void(0);">order information</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-menu-col">
-                        <h3>FOOTER</h3>
-                        <ul>
-                            <li><a href="javascript:void(0);">About us</a></li>
-                            <li><a href="javascript:void(0);">create</a></li>
-                            <li><a href="javascript:void(0);">tech specs</a></li>
-                            <li><a href="javascript:void(0);">order information</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    <div class="contact-info">Contact us <a href="mailto:info@familystories.com">info@familystories.com</a><span class="seperator">|</span><span class="phone">0030 123 1234 456</span></div>
-                    <div class="copyright">All rights reserved FAMILY STORIES 2016</div>
-                </div>
-            </div>
-        </footer>
-    </div>
-</body>
-</html>
