--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -1,5 +1,5 @@
 ﻿body{
-    background-color:#fff;
+    // background-color:#fff;
     font-family: 'Rubik', sans-serif;
     font-weight:400;
     overflow-x:hidden;
